Source/WebCore/platform/mediastream/RealtimeMediaSourceCenter.h
@@ -100,6 +100,8 @@ public:
     void removeDevicesChangedObserver(DevicesChangedObserverToken);
     void captureDevicesChanged();
 
+    void setVisibility(bool isVisible);
+
 protected:
     RealtimeMediaSourceCenter();
 
