Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm
@@ -122,6 +122,15 @@ public:
             return { };
         return AVVideoCaptureSource::create(device, deviceID, constraints);
     }
+
+#if PLATFORM(IOS)
+private:
+    void setVisibility(bool isVisible)
+    {
+        if (activeSource())
+            activeSource()->setMuted(!isVisible);
+    }
+#endif
 };
 
 CaptureSourceOrError AVVideoCaptureSource::create(AVCaptureDeviceTypedef* device, const AtomicString& id, const MediaConstraints* constraints)
