Source/WebCore/testing/Internals.h
@@ -565,6 +565,8 @@ public:
     void simulateWebGLContextChanged(WebGLRenderingContext&);
 #endif
 
+    void setPageVisibility(bool isVisible);
+
 #if ENABLE(MEDIA_STREAM)
     ExceptionOr<void> setMediaDeviceState(const String& id, const String& property, bool value);
     unsigned long trackAudioSampleCount() const { return m_trackAudioSampleCount; }
